Fix frontend auth UI: add separate login/register buttons, add auth translations for all languages, update modal behavior
- Add separate Login and Register buttons in header
- Add authentication translations for all 15 languages
- Update modal to open on correct tab based on button clicked
- Fix button text updates when language changes
- Improve responsive design for auth buttons

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
                 </div>
                 <div class="header-controls">
                     <div class="auth-section">
-                        <button id="authBtn" class="btn btn-outline auth-btn">Войти</button>
+                        <button id="loginBtn" class="btn btn-outline auth-btn">Войти</button>
+                        <button id="registerBtn" class="btn btn-primary auth-btn">Регистрация</button>
                         <div id="userInfo" class="user-info" style="display: none;">
                             <span>Привет, <span id="userName"></span></span>
                             <button id="logoutBtn" class="btn btn-outline logout-btn">Выйти</button>
