feat: Add user dashboard with full CRUD operations
- Add 'My Links' page with search, filter, pagination
- Implement user links API endpoints (GET/PUT/DELETE /api/links)
- Update database schema with user_id and title fields
- Fix UI: show user name, hide auth buttons for logged users
- Add dropdown menu with profile and links navigation
- Update Memory Bank with UI/UX guidelines for URL shorteners

UI/UX Improvements:
- User info displays name instead of email
- Dropdown menu with My Links and Profile options
- Auth buttons hidden for authenticated users
- Modern dashboard design with cards and modals

Database Changes:
- Added user_id and title columns to urls table
- New indexes for user_id and title fields
- CRUD methods for user-specific link operations

API Endpoints:
- GET /api/links - get user's links
- PUT /api/links/:id - update user link
- DELETE /api/links/:id - delete user link

Frontend Features:
- Search and filter links by title/URL/code
- Sort by date, clicks, or alphabetically
- Pagination with 12 links per page
- Edit modal for updating links
- Delete confirmation modal
- Copy to clipboard functionality
- Toast notifications for user feedback

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,27 @@
                         <button id="loginBtn" class="btn btn-outline auth-btn">Войти</button>
                         <button id="registerBtn" class="btn btn-primary auth-btn">Регистрация</button>
                         <div id="userInfo" class="user-info" style="display: none;">
-                            <span>Привет, <span id="userName"></span></span>
-                            <button id="logoutBtn" class="btn btn-outline logout-btn">Выйти</button>
+                            <div class="user-avatar">👤</div>
+                            <div class="user-details">
+                                <div class="user-display-name" id="userDisplayName"></div>
+                                <div class="user-email" id="userEmail"></div>
+                            </div>
+                            <div class="user-menu-toggle">▼</div>
+                            <div class="user-dropdown" id="userDropdown">
+                                <a href="#" class="dropdown-item" id="myLinksLink">
+                                    <span class="dropdown-icon">🔗</span>
+                                    Мои ссылки
+                                </a>
+                                <a href="#" class="dropdown-item" id="profileLink">
+                                    <span class="dropdown-icon">👤</span>
+                                    Профиль
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a href="#" class="dropdown-item logout-link" id="logoutBtn">
+                                    <span class="dropdown-icon">🚪</span>
+                                    Выйти
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
