--- a/public/my-links.html
+++ b/public/my-links.html
@@ -8,66 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <!-- Top Navigation Bar -->
-        <nav class="top-nav">
-            <div class="nav-container">
-                <div class="nav-left">
-                    <div class="language-selector">
-                        <label for="languageSelect">Language:</label>
-                        <select id="languageSelect">
-                            <option value="en">English</option>
-                            <option value="zh">中文</option>
-                            <option value="es">Español</option>
-                            <option value="ar">العربية</option>
-                            <option value="hi">हिन्दी</option>
-                            <option value="ru" selected>Русский</option>
-                            <option value="fr">Français</option>
-                            <option value="ja">日本語</option>
-                            <option value="de">Deutsch</option>
-                            <option value="pt">Português</option>
-                            <option value="it">Italiano</option>
-                            <option value="ko">한국어</option>
-                            <option value="tr">Türkçe</option>
-                            <option value="pl">Polski</option>
-                            <option value="nl">Nederlands</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="nav-right">
-                    <div class="nav-links">
-                        <a href="/" class="nav-link">Главная</a>
-                        <a href="/my-links" class="nav-link active">Мои ссылки</a>
-                    </div>
-                    <div class="auth-section">
-                        <button id="loginBtn" class="btn btn-outline auth-btn">Войти</button>
-                        <button id="registerBtn" class="btn btn-primary auth-btn">Регистрация</button>
-                        <div id="userInfo" class="user-info" style="display: none;">
-                            <div class="user-avatar">👤</div>
-                            <div class="user-details">
-                                <div class="user-display-name" id="userDisplayName"></div>
-                                <div class="user-email" id="userEmail"></div>
-                            </div>
-                            <div class="user-menu-toggle">▼</div>
-                            <div class="user-dropdown" id="userDropdown">
-                                <a href="#" class="dropdown-item" id="myLinksLink">
-                                    <span class="dropdown-icon">🔗</span>
-                                    Мои ссылки
-                                </a>
-                                <a href="#" class="dropdown-item" id="profileLink">
-                                    <span class="dropdown-icon">👤</span>
-                                    Профиль
-                                </a>
-                                <div class="dropdown-divider"></div>
-                                <a href="#" class="dropdown-item logout-link" id="logoutBtn">
-                                    <span class="dropdown-icon">🚪</span>
-                                    Выйти
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <div id="header-container"></div>
 
         <main class="dashboard-main">
             <div class="dashboard-header">
@@ -121,9 +62,7 @@
             </div>
         </main>
 
-        <footer>
-            <p>&copy; 2025 URL Shortener. Создано с помощью Node.js и Express.</p>
-        </footer>
+        <div id="footer-container"></div>
     </div>
 
     <!-- Link Edit Modal -->
@@ -177,6 +116,7 @@
         </div>
     </div>
 
+    <script src="components.js"></script>
     <script src="my-links.js"></script>
 </body>
 </html>
