Исправлен index.html - убрал конфликтующий header, добавил hero-section
- Удалил жесткий <header> элемент из index.html
- Добавил hero-section с заголовком и описанием
- Добавил стили для hero-section в CSS
- Теперь header и footer загружаются через компоненты правильно

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,12 @@
     <div class="container">
         <div id="header-container"></div>
 
-        <header>
-            <div class="header-content">
-                <div class="title-section">
-                    <h1>🔗 URL Shortener</h1>
-                    <p>Сократите длинные ссылки в короткие и удобные</p>
-                </div>
-            </div>
-        </header>
-
         <main>
+            <div class="hero-section">
+                <h1>🔗 URL Shortener</h1>
+                <p>Сократите длинные ссылки в короткие и удобные</p>
+            </div>
+
             <div class="url-form-container">
                 <form id="urlForm" class="url-form">
                     <div class="input-group">
