--- a/public/my-links.html
+++ b/public/my-links.html
@@ -117,6 +117,7 @@
     </div>
 
     <script src="components.js"></script>
+    <script src="app.js"></script>
     <script src="my-links.js"></script>
 </body>
 </html>
