--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,44 @@
 </head>
 <body>
     <div class="container">
-        <div id="header-container"></div>
+        <nav class="top-nav">
+            <div class="nav-container">
+                <div class="nav-left">
+                    <div class="language-selector">
+                        <label for="languageSelect">Язык:</label>
+                        <select id="languageSelect">
+                            <option value="en">English</option>
+                            <option value="zh">中文</option>
+                            <option value="es">Español</option>
+                            <option value="ar">العربية</option>
+                            <option value="hi">हिन्दी</option>
+                            <option value="ru" selected>Русский</option>
+                            <option value="fr">Français</option>
+                            <option value="ja">日本語</option>
+                            <option value="de">Deutsch</option>
+                            <option value="pt">Português</option>
+                            <option value="it">Italiano</option>
+                            <option value="ko">한국어</option>
+                            <option value="tr">Türkçe</option>
+                            <option value="pl">Polski</option>
+                            <option value="nl">Nederlands</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="nav-right">
+                    <div class="nav-links">
+                        <a href="/" class="nav-link active">Главная</a>
+                        <a href="/my-links" class="nav-link">Мои ссылки</a>
+                    </div>
+                    <div class="auth-section">
+                        <button id="loginBtn" class="btn btn-outline auth-btn">Войти</button>
+                        <button id="registerBtn" class="btn btn-primary auth-btn">Регистрация</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
 
-        <main>
+        <main style="margin-top: 80px;">
             <div class="hero-section">
                 <h1>🔗 URL Shortener</h1>
                 <p>Сократите длинные ссылки в короткие и удобные</p>
@@ -72,6 +107,7 @@
     </div>
 
     <script src="components.js"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
