Add debugging for user links issue
- Add debug endpoint /api/debug/user-links
- Add detailed logging to my-links.js
- Fix header initialization order
- Fix auth UI display timing

--- a/public/my-links.html
+++ b/public/my-links.html
@@ -120,6 +120,6 @@
 
     <script src="components.js"></script>
     <script src="app.js"></script>
-    <script src="my-links.js" defer></script>
+    <script src="my-links.js"></script>
 </body>
 </html>
