--- a/public/index.html
+++ b/public/index.html
@@ -8,42 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <nav class="top-nav">
-            <div class="nav-container">
-                <div class="nav-left">
-                    <div class="language-selector">
-                        <label for="languageSelect">Язык:</label>
-                        <select id="languageSelect">
-                            <option value="en">English</option>
-                            <option value="zh">中文</option>
-                            <option value="es">Español</option>
-                            <option value="ar">العربية</option>
-                            <option value="hi">हिन्दी</option>
-                            <option value="ru" selected>Русский</option>
-                            <option value="fr">Français</option>
-                            <option value="ja">日本語</option>
-                            <option value="de">Deutsch</option>
-                            <option value="pt">Português</option>
-                            <option value="it">Italiano</option>
-                            <option value="ko">한국어</option>
-                            <option value="tr">Türkçe</option>
-                            <option value="pl">Polski</option>
-                            <option value="nl">Nederlands</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="nav-right">
-                    <div class="nav-links">
-                        <a href="/" class="nav-link active">Главная</a>
-                        <a href="/my-links" class="nav-link">Мои ссылки</a>
-                    </div>
-                    <div class="auth-section">
-                        <button id="loginBtn" class="btn btn-outline auth-btn">Войти</button>
-                        <button id="registerBtn" class="btn btn-primary auth-btn">Регистрация</button>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <div id="header-container"></div>
 
         <main style="margin-top: 80px;">
             <div class="hero-section">
