--- a/public/my-links.html
+++ b/public/my-links.html
@@ -119,6 +119,21 @@
     </div>
 
     <script src="components.js"></script>
+    <script>
+        // Load Supabase dynamically to ensure it's available
+        (function() {
+            const script = document.createElement('script');
+            script.src = 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js';
+            script.onload = function() {
+                // Dispatch custom event when Supabase is loaded
+                window.dispatchEvent(new Event('supabaseLoaded'));
+            };
+            script.onerror = function() {
+                console.error('Failed to load Supabase script');
+            };
+            document.head.appendChild(script);
+        })();
+    </script>
     <script src="app.js"></script>
     <script src="my-links.js"></script>
 </body>
