Migrate to FastAPI: Complete rewrite in Python with FastAPI, SQLAlchemy, and Vercel Postgres
- Replace Node.js/Express with FastAPI for better performance
- Implement SQLAlchemy ORM with PostgreSQL support
- Create Pydantic schemas for API validation
- Set up Vercel deployment for Python functions
- Add comprehensive test suite with pytest
- Update frontend to work with new API
- Configure environment for production deployment

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
             script.src = 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js';
             script.onload = function() {
                 // Dispatch custom event when Supabase is loaded
-                window.dispatchEvent(new Event('supabaseLoaded'));
+                window.dispatchEvent(new Event('supabaseReady'));
             };
             script.onerror = function() {
                 console.error('Failed to load Supabase script');
