--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL Shortener - FastAPI Edition</title>
+    <title>URL Shortener - Flask Edition</title>
     <style>
         * {
             margin: 0;
@@ -41,6 +41,79 @@
         .header p {
             color: rgba(255,255,255,0.9);
             font-size: 1.2rem;
+        }
+
+        .auth-section {
+            background: rgba(255,255,255,0.1);
+            padding: 20px;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            backdrop-filter: blur(10px);
+        }
+
+        .auth-tabs {
+            display: flex;
+            margin-bottom: 20px;
+        }
+
+        .auth-tab {
+            flex: 1;
+            padding: 10px;
+            background: transparent;
+            border: none;
+            color: rgba(255,255,255,0.7);
+            cursor: pointer;
+            border-bottom: 2px solid transparent;
+            transition: all 0.3s;
+        }
+
+        .auth-tab.active {
+            color: white;
+            border-bottom-color: white;
+        }
+
+        .auth-form {
+            display: none;
+        }
+
+        .auth-form.active {
+            display: block;
+        }
+
+        .auth-form .input-group {
+            margin-bottom: 15px;
+        }
+
+        .auth-form .submit-btn {
+            width: auto;
+            margin-top: 10px;
+        }
+
+        .user-info {
+            background: rgba(255,255,255,0.1);
+            padding: 15px;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            backdrop-filter: blur(10px);
+            color: white;
+        }
+
+        .user-info p {
+            margin-bottom: 10px;
+        }
+
+        .logout-btn {
+            background: rgba(255,255,255,0.2);
+            color: white;
+            border: 1px solid rgba(255,255,255,0.3);
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        .logout-btn:hover {
+            background: rgba(255,255,255,0.3);
         }
 
         .url-form {
@@ -242,7 +315,51 @@
     <div class="container">
         <div class="header">
             <h1>🔗 URL Shortener</h1>
-            <p>FastAPI Edition - Сократите длинные ссылки в короткие и удобные</p>
+            <p>Flask Edition - Сократите длинные ссылки в короткие и удобные</p>
+        </div>
+
+        <!-- User Info Section -->
+        <div id="userInfo" class="user-info" style="display: none;">
+            <p>Привет, <span id="userName"></span>! (<span id="userEmail"></span>)</p>
+            <button id="logoutBtn" class="logout-btn">Выйти</button>
+        </div>
+
+        <!-- Auth Section -->
+        <div id="authSection" class="auth-section">
+            <div class="auth-tabs">
+                <button id="loginTab" class="auth-tab active">Войти</button>
+                <button id="registerTab" class="auth-tab">Регистрация</button>
+            </div>
+
+            <!-- Login Form -->
+            <form id="loginForm" class="auth-form active">
+                <div class="input-group">
+                    <label for="loginUsername">Имя пользователя или Email:</label>
+                    <input type="text" id="loginUsername" name="username_or_email" required>
+                </div>
+                <div class="input-group">
+                    <label for="loginPassword">Пароль:</label>
+                    <input type="password" id="loginPassword" name="password" required>
+                </div>
+                <button type="submit" class="submit-btn">Войти</button>
+            </form>
+
+            <!-- Register Form -->
+            <form id="registerForm" class="auth-form">
+                <div class="input-group">
+                    <label for="registerUsername">Имя пользователя:</label>
+                    <input type="text" id="registerUsername" name="username" required>
+                </div>
+                <div class="input-group">
+                    <label for="registerEmail">Email:</label>
+                    <input type="email" id="registerEmail" name="email" required>
+                </div>
+                <div class="input-group">
+                    <label for="registerPassword">Пароль:</label>
+                    <input type="password" id="registerPassword" name="password" required>
+                </div>
+                <button type="submit" class="submit-btn">Зарегистрироваться</button>
+            </form>
         </div>
 
         <form id="urlForm" class="url-form">
@@ -292,12 +409,167 @@
     </div>
 
     <footer class="footer">
-        <p>© 2025 URL Shortener - FastAPI Edition. Built with <a href="https://fastapi.tiangolo.com/" target="_blank">FastAPI</a> and deployed on <a href="https://vercel.com" target="_blank">Vercel</a></p>
+        <p>© 2025 URL Shortener - Flask Edition. Built with <a href="https://flask.palletsprojects.com/" target="_blank">Flask</a> and deployed on <a href="https://render.com" target="_blank">Render</a></p>
     </footer>
 
     <script>
-        class UrlShortener {
+        class AuthManager {
             constructor() {
+                this.userInfo = document.getElementById('userInfo');
+                this.authSection = document.getElementById('authSection');
+                this.userName = document.getElementById('userName');
+                this.userEmail = document.getElementById('userEmail');
+                this.logoutBtn = document.getElementById('logoutBtn');
+
+                this.loginTab = document.getElementById('loginTab');
+                this.registerTab = document.getElementById('registerTab');
+                this.loginForm = document.getElementById('loginForm');
+                this.registerForm = document.getElementById('registerForm');
+
+                this.currentUser = null;
+                this.init();
+            }
+
+            init() {
+                // Tab switching
+                if (this.loginTab) {
+                    this.loginTab.addEventListener('click', () => this.switchTab('login'));
+                }
+                if (this.registerTab) {
+                    this.registerTab.addEventListener('click', () => this.switchTab('register'));
+                }
+
+                // Form submissions
+                if (this.loginForm) {
+                    this.loginForm.addEventListener('submit', this.handleLogin.bind(this));
+                }
+                if (this.registerForm) {
+                    this.registerForm.addEventListener('submit', this.handleRegister.bind(this));
+                }
+
+                // Logout
+                if (this.logoutBtn) {
+                    this.logoutBtn.addEventListener('click', this.logout.bind(this));
+                }
+
+                // Check if user is already logged in
+                this.checkAuthStatus();
+            }
+
+            switchTab(tab) {
+                // Update tab buttons
+                document.querySelectorAll('.auth-tab').forEach(btn => btn.classList.remove('active'));
+                document.querySelectorAll('.auth-form').forEach(form => form.classList.remove('active'));
+
+                if (tab === 'login') {
+                    this.loginTab.classList.add('active');
+                    this.loginForm.classList.add('active');
+                } else {
+                    this.registerTab.classList.add('active');
+                    this.registerForm.classList.add('active');
+                }
+            }
+
+            async handleLogin(event) {
+                event.preventDefault();
+                const formData = new FormData(event.target);
+                const data = Object.fromEntries(formData);
+
+                try {
+                    const response = await fetch('/api/auth/login', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(data)
+                    });
+
+                    const result = await response.json();
+
+                    if (response.ok) {
+                        this.setCurrentUser(result.user, result.access_token);
+                        this.showSuccess('Успешный вход!');
+                    } else {
+                        this.showError(result.error || 'Ошибка входа');
+                    }
+                } catch (error) {
+                    this.showError('Ошибка подключения');
+                }
+            }
+
+            async handleRegister(event) {
+                event.preventDefault();
+                const formData = new FormData(event.target);
+                const data = Object.fromEntries(formData);
+
+                try {
+                    const response = await fetch('/api/auth/register', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(data)
+                    });
+
+                    const result = await response.json();
+
+                    if (response.ok) {
+                        this.setCurrentUser(result.user, result.access_token);
+                        this.showSuccess('Регистрация успешна!');
+                    } else {
+                        this.showError(result.error || 'Ошибка регистрации');
+                    }
+                } catch (error) {
+                    this.showError('Ошибка подключения');
+                }
+            }
+
+            async checkAuthStatus() {
+                try {
+                    const response = await fetch('/api/auth/me');
+                    if (response.ok) {
+                        const user = await response.json();
+                        this.setCurrentUser(user);
+                    }
+                } catch (error) {
+                    // User not authenticated
+                }
+            }
+
+            setCurrentUser(user, token) {
+                this.currentUser = user;
+                if (token) {
+                    localStorage.setItem('auth_token', token);
+                }
+
+                // Update UI
+                this.userName.textContent = user.username;
+                this.userEmail.textContent = user.email;
+                this.userInfo.style.display = 'block';
+                this.authSection.style.display = 'none';
+            }
+
+            logout() {
+                this.currentUser = null;
+                localStorage.removeItem('auth_token');
+                this.userInfo.style.display = 'none';
+                this.authSection.style.display = 'block';
+                this.showSuccess('Вы вышли из системы');
+            }
+
+            getAuthToken() {
+                return localStorage.getItem('auth_token');
+            }
+
+            showSuccess(message) {
+                // Simple success message
+                alert(message);
+            }
+
+            showError(message) {
+                alert('Ошибка: ' + message);
+            }
+        }
+
+        class UrlShortener {
+            constructor(authManager) {
+                this.authManager = authManager;
                 this.form = document.getElementById('urlForm');
                 this.originalUrlInput = document.getElementById('originalUrl');
                 this.shortenBtn = document.getElementById('shortenBtn');
@@ -489,7 +761,8 @@
 
         // Initialize app when DOM is loaded
         document.addEventListener('DOMContentLoaded', () => {
-            new UrlShortener();
+            const authManager = new AuthManager();
+            new UrlShortener(authManager);
         });
     </script>
 </body>
