--- a/index.html
+++ b/index.html
@@ -13,43 +13,43 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'SF Pro Text', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            background: #f2f2f7;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             color: #1d1d1f;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 980px;
             margin: 0 auto;
-            padding: 40px 20px;
+            padding: 48px 20px;
             flex: 1;
         }
 
         .header {
             text-align: center;
-            margin-bottom: 60px;
+            margin-bottom: 72px;
         }
 
         .header h1 {
-            font-size: 3.5rem;
+            font-size: 3rem;
             font-weight: 700;
             margin-bottom: 16px;
-            background: linear-gradient(135deg, #1d1d1f 0%, #424245 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            letter-spacing: -0.02em;
+            color: #1d1d1f;
+            letter-spacing: -0.025em;
+            line-height: 1.1;
         }
 
         .header p {
-            font-size: 1.3rem;
+            font-size: 1.25rem;
             color: #86868b;
             font-weight: 400;
             max-width: 600px;
             margin: 0 auto;
-            line-height: 1.5;
+            line-height: 1.4;
         }
 
         .auth-section {
@@ -214,9 +214,10 @@
             font-size: 17px;
             font-weight: 600;
             cursor: pointer;
-            transition: all 0.2s ease;
+            transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
             width: 100%;
             box-shadow: 0 2px 4px rgba(0, 122, 255, 0.2);
+            min-height: 44px;
         }
 
         .submit-btn:hover {
@@ -225,8 +226,13 @@
             box-shadow: 0 4px 8px rgba(0, 122, 255, 0.3);
         }
 
+        .submit-btn:active {
+            transform: translateY(0);
+            box-shadow: 0 1px 2px rgba(0, 122, 255, 0.2);
+        }
+
         .submit-btn:disabled {
-            opacity: 0.6;
+            opacity: 0.5;
             cursor: not-allowed;
             transform: none;
             box-shadow: none;
